tests/elab_fail/autoBoundErrorMsg.lean.out.expected
autoBoundErrorMsg.lean:1:43-1:44: error: don't know how to synthesize placeholder
context:
α : Sort u_1
α✝ : Sort u_2
a b : α✝
h : ∀ {a b : α}, a = b
⊢ a = b
