tests/elab_fail/autoBoundErrorMsg.lean
example (h : {a b : α} → a = b) : a = b := _
